export const snapshot = {};

snapshot[`createCodeFrame markers 1`] = `
"
  1 | foo
> 2 | bar
    |   ^
  3 | baz
"
`;

snapshot[`createCodeFrame markers 2`] = `
"
> 1 | foo
    | ^
  2 | bar
  3 | baz
"
`;

snapshot[`createCodeFrame markers 3`] = `
"
  1 | foo
  2 | bar
> 3 | baz
    |   ^
"
`;

snapshot[`createCodeFrame markers 4`] = `
"
   7 | 
   8 | 
>  9 | bar
     | ^
  10 | 
  11 | 
  12 | bar
"
`;

snapshot[`createCodeFrame with indentation 1`] = `
"
  1 | foo
> 2 |       bar
    |       ^
  3 | baz
"
`;

snapshot[`createCodeFrame with indentation 2`] = `
"
  1 | foo
> 2 |     bar
    |     ^
  3 | baz
"
`;
